add: login and registration and update user
